# ADMapper

./: .dockerignore  .gitignore  AGENTS.md  DEVELOP.md  Dockerfile  Dockerfile.neo4j  PLAN.md  README.md  REVIEW.md  admapper_kuzu  admapper_kuzu.wal  e2e-test.sh  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml  ci.yml  create-release.yml  docker.yml  docs.yml  lint.yml  release.yml  test.yml
dev/: Dockerfile
docker/: admapper-neo4j-entrypoint.sh
docs/admapper/: mkdocs.yml
docs/crustdb/: mkdocs.yml
e2e/: Dockerfile  docker-compose.yml  generate-expected.py  run-tests.sh  run_tests.py
e2e/lib/: api.py  api.sh  assertions.sh  runner.py  utils.sh
e2e/tests/: 00_health.sh  01_import.sh  02_stats.sh  03_query.sh  04_search.sh
issues/closed/: code-review-02-HIGH-handler-core-duplication.md  code-review-03-HIGH-crustdb-dead-legacy-executor.md  code-review-08-HIGH-flatten-node-properties-triplicated.md  code-review-10-MEDIUM-localstorage-key-mismatch.md  code-review-12-MEDIUM-inconsistent-escaping-crustdb.md  code-review-15-MEDIUM-escape-key-listener-leak.md  code-review-23-MEDIUM-crustdb-operator-fallback-drops-bindings.md  code-review-24-MEDIUM-duplicate-formatduration.md  code-review-26-LOW-dead-exports.md  code-review-27-LOW-unnecessary-self-params.md  code-review-31-LOW-mutable-global-singletons.md  code-review-C2-critical-hardcoded-admin-types.md  code-review-H10-high-case-parser-state-machine.md  code-review-H8-high-handler-core-split-unclear.md  code-review-L3-low-panic-instead-of-assertions-in-tests.md  export.md  (+40 more)
public/: licenses.json
scripts/: build-ts.js  build.sh  bump-version.sh  check.sh  copy-static.js  e2e-test.sh  format.sh  generate-crustdb-docs.py  generate-icons.js  generate-icons.sh  generate-licenses.sh  hash-css.js  make_collage.py  sloccount.sh  test.sh
src/: main.ts
src-backend/: Cargo.toml  tauri.conf.json
src-backend/src/: lib.rs  main.rs
src-backend/src/db/: cozo.rs  falkordb.rs  kuzu.rs  mod.rs
src-backend/src/import/: bloodhound.rs  mod.rs
src-backend/tests/: api_tests.rs
src-frontend/: REVIEW.md  index.html  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/backend/: Cargo.toml  tauri.conf.json
src/backend/capabilities/: default.json
src/backend/icons/: icon.icns
src/backend/src/: exploit_likelihood.rs  generate.rs  graph.rs  history.rs  lib.rs  main.rs  settings.rs  state.rs  tauri_commands.rs
src/backend/src/api/: core.rs  handlers.rs  mod.rs  types.rs
src/backend/src/api/core/: database.rs  exploit_likelihood.rs  mod.rs  mutation.rs  nodes.rs  paths.rs  query.rs  tiers.rs
src/backend/src/api/handlers/: database.rs  exploit_likelihood.rs  graph.rs  history.rs  import.rs  insights.rs  layout.rs  mod.rs  mutation.rs  nodes.rs  paths.rs  query.rs  settings.rs
src/backend/src/api/handlers/layout/: force.rs  hierarchical.rs  mod.rs  radial.rs  simple.rs
src/backend/src/db/: algorithms.rs  backend.rs  cozo.rs  crustdb.rs  cypher_common.rs  falkordb.rs  kuzu.rs  mod.rs  neo4j.rs  types.rs  url.rs
src/backend/src/db/crustdb/: algorithms.rs  backend_impl.rs  connections.rs  edges.rs  insights.rs  mod.rs  nodes.rs  query.rs  tests.rs
src/backend/src/import/: bloodhound.rs  mod.rs  types.rs
src/backend/src/import/bloodhound/: dcsync.rs  edges.rs  flush.rs  mapping.rs  mod.rs  nodes.rs  orchestration.rs  tests.rs  types.rs
src/backend/src/sugiyama/: coordinate.rs  crossing.rs  graph.rs  layering.rs  mod.rs
src/backend/tests/: api_tests.rs  tauri_parity_test.rs
src/crustdb/: Cargo.toml  README.md
src/crustdb/crustdb-cli/: Cargo.toml
src/crustdb/crustdb-cli/src/: main.rs
src/crustdb/examples/: bench_crud.rs  bench_shortest.rs  bench_stress.rs  comparison.rs  generators.rs  profile_bottlenecks.rs  profile_crud.rs  profile_e2e_queries.rs  profile_shortest.rs  test_grid.rs
src/crustdb/issues/closed/: limit-breaks-varlen-path-with-where.md
src/crustdb/issues/new/: varlen-path-inline-where-filter-bug.md
src/crustdb/src/: error.rs  graph.rs  lib.rs  storage.rs
src/crustdb/src/database/: algorithms.rs  config.rs  data_access.rs  execution.rs  history.rs  import.rs  indexes.rs  mod.rs  tests.rs
src/crustdb/src/query/: ast.rs  cypher.pest  executor.rs  mod.rs  operators.rs  parser.rs  planner.rs
src/crustdb/src/query/executor/: aggregate.rs  algorithms.rs  create.rs  eval.rs  mod.rs  mutation.rs  pattern.rs  plan_exec.rs  result.rs
src/crustdb/src/query/executor/pattern/: matching.rs  mod.rs  shortest_path.rs  traversal.rs
src/crustdb/src/query/executor/plan_exec/: convert.rs  eval.rs  expand.rs  filter.rs  mod.rs  mutate.rs  project.rs  scan.rs
src/crustdb/src/query/parser/: clause.rs  expression.rs  mod.rs  pattern.rs
src/crustdb/src/query/planner/: create.rs  expression.rs  match_plan.rs  mod.rs  optimizer.rs
src/crustdb/src/query/planner/optimizer/: cardinality.rs  filter.rs  helpers.rs  mod.rs  pushdown.rs  tests.rs
src/crustdb/src/storage/: adjacency.rs  cache.rs  crud.rs  entity_cache.rs  history.rs  index.rs  mod.rs  query.rs  schema.rs
src/crustdb/tests/: fixtures_test.rs  list_predicate_test.rs  memory_safeguard_test.rs  path_to_highvalue_test.rs  query_optimization_test.rs  union_all_test.rs
src/crustdb/tests/fixtures/: NOTICE  README.md
src/crustdb/tests/fixtures/m10_limit_skip/: basic.toml
src/crustdb/tests/fixtures/m11_case/: basic.toml
src/crustdb/tests/fixtures/m11_order_by/: basic.toml
src/crustdb/tests/fixtures/m11_with/: basic.toml
src/crustdb/tests/fixtures/m2_create/: basic.toml
src/crustdb/tests/fixtures/m3_match/: basic.toml
src/crustdb/tests/fixtures/m4_where/: basic.toml
src/crustdb/tests/fixtures/m5_single_hop/: basic.toml
src/crustdb/tests/fixtures/m6_multi_hop/: basic.toml
src/crustdb/tests/fixtures/m7_mutation/: basic.toml
src/crustdb/tests/fixtures/m8_aggregation/: basic.toml
src/crustdb/tests/fixtures/m8_shortest_path/: basic.toml
src/crustdb/tests/fixtures/m9_functions/: basic.toml
tools/: graph_layout_test.py
(+235 files in other folders)
