[package]
name = "admapper"
version = "0.1.0"
description = "BloodHound frontend for visualizing Active Directory permissions"
authors = ["ADMapper Contributors"]
license = "MIT"
repository = "https://github.com/admapper/admapper"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
