[package]
name = "admapper"
version = "0.1.0"
description = "BloodHound frontend for visualizing Active Directory permissions"
authors = ["ADMapper Contributors"]
license = "MIT"
repository = "https://github.com/admapper/admapper"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI and web server
clap = { version = "4", features = ["derive"] }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }

# Database and import
cozo = { version = "0.7", features = ["storage-sqlite"] }
rayon = "=1.10.0"  # Pin to avoid graph_builder incompatibility with 1.11
zip = "2"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
dashmap = "6"
parking_lot = "0.12"
futures = "0.3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Desktop mode (optional)
tauri = { version = "2", features = [], optional = true }
tauri-plugin-shell = { version = "2", optional = true }

[features]
default = ["desktop"]
desktop = ["tauri", "tauri-plugin-shell", "tauri-build"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
