[package]
name = "admapper"
version = "0.1.0"
description = "BloodHound frontend for visualizing Active Directory permissions"
authors = ["ADMapper Contributors"]
license = "MIT"
repository = "https://github.com/admapper/admapper"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI and web server
clap = { version = "4", features = ["derive"] }
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"

# Database backends (all optional)
# Note: cozo uses storage-sled (pure Rust) instead of storage-sqlite to avoid
# native library linking conflicts with crustdb's rusqlite. Both can now coexist.
cozo = { version = "0.7", default-features = false, features = ["storage-sled", "graph-algo"], optional = true }
kuzu = { version = "0.11.2", optional = true }
crustdb = { path = "../crustdb", optional = true }
neo4rs = { version = "0.8", optional = true }
falkordb = { version = "0.1", optional = true }
rayon = "=1.10.0"  # Pin to avoid graph_builder incompatibility with 1.11
zip = "2"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
dashmap = "6"
dirs = "6"
parking_lot = "0.12"
futures = "0.3"
async-stream = "0.3"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Desktop mode (optional)
tauri = { version = "2", features = [], optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2", optional = true }

[features]
default = ["desktop", "crustdb", "neo4j", "falkordb"]
desktop = ["tauri", "tauri-plugin-shell", "tauri-plugin-dialog", "tauri-build"]
# KuzuDB backend - Cypher-based, file storage.
kuzu = ["dep:kuzu"]
# CozoDB backend - Datalog-based, uses sled storage.
cozo = ["dep:cozo"]
# CrustDB backend (default) - Cypher-based, SQLite storage.
crustdb = ["dep:crustdb"]
# Neo4j backend (default) - Cypher-based, network.
neo4j = ["dep:neo4rs"]
# FalkorDB backend (default) - Cypher-based, Redis-based network.
falkordb = ["dep:falkordb"]

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
mime = "0.3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
