[package]
name = "crustdb"
version = "0.1.0"
edition = "2021"
description = "Embedded graph database with SQLite backend and Cypher support"
license = "MIT"

[features]
default = ["bundled-sqlite"]
# Bundle SQLite (standalone use). Disable when using with cozo to avoid link conflicts.
bundled-sqlite = ["rusqlite/bundled"]

[dependencies]
# SQLite - use system SQLite by default, enable bundled-sqlite feature for standalone
rusqlite = { version = "0.31" }

# Cypher parsing (grammar based on open-cypher crate, MIT OR Apache-2.0)
pest = "2.7"
pest_derive = "2.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Regex
regex = "1.10"

# Logging
tracing = "0.1"

[dev-dependencies]
tempfile = "3.10"
toml = "0.8"
glob = "0.3"
pprof = { version = "0.14", features = ["flamegraph"] }
