[package]
name = "crustdb"
version = "0.1.0"
edition = "2021"
description = "Embedded graph database with SQLite backend and Cypher support"
license = "MIT"
autoexamples = false

[features]
default = []

[dependencies]
# SQLite with bundled recent version (required for jsonb support)
rusqlite = { version = "0.31", features = ["bundled"] }

# Cypher parsing (grammar based on open-cypher crate, MIT OR Apache-2.0)
pest = "2.7"
pest_derive = "2.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Regex
regex = "1.10"

# Logging
tracing = "0.1"

# Small-size optimized vector (stack allocation for small collections)
smallvec = "1.13"

# LRU cache for node/relationship caching during traversals
lru = "0.12"

[dev-dependencies]
tempfile = "3.10"
toml = "0.8"
glob = "0.3"
pprof = { version = "0.14", features = ["flamegraph"] }

# Explicitly list examples (exclude generators.rs and comparison.rs which are modules)
[[example]]
name = "bench_crud"
path = "examples/bench_crud.rs"

[[example]]
name = "bench_shortest"
path = "examples/bench_shortest.rs"

[[example]]
name = "bench_stress"
path = "examples/bench_stress.rs"

[[example]]
name = "profile_crud"
path = "examples/profile_crud.rs"

[[example]]
name = "profile_shortest"
path = "examples/profile_shortest.rs"

[[example]]
name = "test_grid"
path = "examples/test_grid.rs"

[[example]]
name = "profile_bottlenecks"
path = "examples/profile_bottlenecks.rs"

[[example]]
name = "profile_e2e_queries"
path = "examples/profile_e2e_queries.rs"
